--- a/iae-ui/app/activities/viewprojects.html
+++ b/iae-ui/app/activities/viewprojects.html
@@ -15,6 +15,7 @@
 			<p><b>endDate:&nbsp;</b>{{project.endDate}}</p>
 			<p><b>status:&nbsp;</b>{{project.status}}</p>
 			<p><b>logoLocWithName:&nbsp;</b>{{project.logoLocWithName}}</p>
+			<img [src]="project.logoLocWithName">
 		</li>
 	  </ul>
     </div>
