--- a/iae-ui/app/home/upcomingevents.html
+++ b/iae-ui/app/home/upcomingevents.html
@@ -18,6 +18,7 @@
             <p>{{activity.name}}</p>
             <p>{{activity.startDate}}</p>
             <p>{{activity.description}}</p>
+            <p>{{activity.projectId}}</p>
         </li>
     </div>
 </div>
