--- a/iae-ui/app/activities/addactivity.html
+++ b/iae-ui/app/activities/addactivity.html
@@ -114,48 +114,32 @@
                         </span>
                     </div>
                 </div>
-                <div class="form-group"
-                    [ngClass]="{'has-error': displayMessage.logo }">
+                <div class="form-group">
                     <label class="col-md-3 control-label" 
-                           for="logoId">Logo</label>
+                           for="activityLogoId">Activity Logo</label>
                     <div class="col-md-6">
-                        <textarea id="logoId"
-                               class="form-control col-md-12" 
-                               formControlName="logo"
-                               placeholder="Logo"></textarea>
-                        <span class="col-md-8 help-block" *ngIf="displayMessage.logo">
-                            {{ displayMessage.logo }}
-                        </span>
+                        <input type="file" 
+                               class="form-control col-md-12"
+                               (change)="fileChange(activityLogo.files[0])"
+                               #activityLogo />
+                        <input id="activityLogoId"
+                               type="hidden" 
+                               formControlName="logoLocWithName"/>      
+                        <img [attr.src]='file_src' alt="" />
                     </div>
                 </div>
                 <div class="form-group"
-                    [ngClass]="{'has-error': displayMessage.imagesLoc }">
-                    <label class="col-md-3 control-label" 
-                           for="imagesLocId">Images location</label>
-                    <div class="col-md-6">
-                        <input id="imagesLocId"
-                               type="text" 
-                               class="form-control col-md-12" 
-                               formControlName="imagesLoc"
-                               placeholder="Images location"/>
-                        <span class="col-md-8 help-block" *ngIf="displayMessage.imagesLoc">
-                            {{ displayMessage.imagesLoc }}
-                        </span>
-                    </div>
-                </div>
-                <div class="form-group"
-                    [ngClass]="{'has-error': displayMessage.project }">
+                    [ngClass]="{'has-error': displayMessage.projectId }">
                     <label class="col-md-3 control-label" 
                            for="projectId">Project</label>
                     <div class="col-md-6">
-                      <select id="projectId" class="form-control col-md-12"  formControlName="project" 
-                      [(ngModel)]="project">
-                          <option *ngFor="let item of projects" [ngValue]="item">  
+                      <select id="projectId" class="form-control col-md-12"  formControlName="projectId">
+                          <option *ngFor="let item of projects" [value]="item.id">  
                           {{item.name}}
                           </option>
-                      </select><p *ngIf="project">{{project.name}}</p>
-                      <span class="col-md-8 help-block" *ngIf="displayMessage.project">
-                            {{ displayMessage.project }}
+                      </select>
+                      <span class="col-md-8 help-block" *ngIf="displayMessage.projectId">
+                            {{ displayMessage.projectId }}
                       </span>
                     </div>
                 </div>
@@ -171,7 +155,7 @@
                         </span>
                         <span>
                             <button class="btn btn-default"
-                                    type="button" [disabled]="activityForm.value.id != ''"
+                                    type="button" [disabled]="activityForm.value.id != 0"
                                     (click)="resetForm()">
                                 Reset
                             </button>
